fix size of search svg on mobile

--- a/layouts/map/components/map-controls/styles.scss
+++ b/layouts/map/components/map-controls/styles.scss
@@ -132,13 +132,20 @@
     margin-left: 10px;
     box-shadow: 0 1px 2px rgba($black, 0.25);
 
-    .theme-button-map-control {
+    .map-control {
       min-width: rem(40px);
       height: rem(40px);
 
       svg {
         width: 25px;
         height: 25px;
+      }
+
+      &.-share {
+        svg {
+          width: 18px;
+          height: 18px;
+        }
       }
     }
 
